--- a/.gitignore
+++ b/.gitignore
@@ -410,6 +410,6 @@ gmon.out
 **/App/Screenshot/
 
 # Ignore resource files
-#**/App/example
-#**/App/engine
-#**/App/dll
+**/App/example
+**/App/engine
+**/App/dll
